--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:900');
 
+.box-space{
+  padding-right: 10px;
+}
+
 .top-cover{
     
     width: 100%;
