--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     
     width: 100%;
     height: 150px;
-    background-image: url('https://handpick.com/static/media/1641/ingredients.jpg?width=480&height=300&mode=crop&format=jpg&quality=70&anchor=middlecenter&scale=both');
+    background-image: url('https://handpick.com/static/media/1641/ingredients.jpg');
     background-size: cover;
 background-repeat: no-repeat;
 background-attachment: fixed;
